Build: Add substitution support to run commands

BUG: 502788